// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SunIcon when asked to render matches snapshot 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="4"
  />
  <path
    d="M12 2v2"
  />
  <path
    d="M12 20v2"
  />
  <path
    d="m4.93 4.93 1.41 1.41"
  />
  <path
    d="m17.66 17.66 1.41 1.41"
  />
  <path
    d="M2 12h2"
  />
  <path
    d="M20 12h2"
  />
  <path
    d="m6.34 17.66-1.41 1.41"
  />
  <path
    d="m19.07 4.93-1.41 1.41"
  />
</svg>
`;

exports[`SunIcon when asked to render with additional class renders with additional class 1`] = `
<svg
  aria-hidden="true"
  className="some-class"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="4"
  />
  <path
    d="M12 2v2"
  />
  <path
    d="M12 20v2"
  />
  <path
    d="m4.93 4.93 1.41 1.41"
  />
  <path
    d="m17.66 17.66 1.41 1.41"
  />
  <path
    d="M2 12h2"
  />
  <path
    d="M20 12h2"
  />
  <path
    d="m6.34 17.66-1.41 1.41"
  />
  <path
    d="m19.07 4.93-1.41 1.41"
  />
</svg>
`;
